"nouveau: change fence destruction logic on screen destroy" hangs Blender 2.79 ?
I have a bit of weird setup:
64-bit kernel: uname -a Linux slax 5.6.14-x64 #1 (closed) SMP PREEMPT Thu May 21 23:01:18 MSK 2020 x86_64 AMD FX(tm)-4300 Quad-Core Processor AuthenticAMD GNU/Linux
(so old partially due to recent kern. regression seen in drm/nouveau#14 (comment 767791) . Now this issue if fixed, but I haven't updated yet)
Mesa git, but like all userspace it still 32-bit, and mesa compiled with clang-10 (10.0.1)
Blender is old 2.79b, I rarely use it, and even rarer look into 'User preferences->system' corner. But I looked recently and got hang.
So, I tried to bisect and my bisect pointed at 28a78132 . I reverted it on top of mesa-git (d49b0fa7) and now everything is fine again.
Note: I have two-GPU setup:
lspci
00:00.0 Host bridge: Advanced Micro Devices, Inc. [AMD/ATI] RD9x0/RX980 Host Bridge (rev 02)
00:00.2 IOMMU: Advanced Micro Devices, Inc. [AMD/ATI] RD890S/RD990 I/O Memory Management Unit (IOMMU)
00:02.0 PCI bridge: Advanced Micro Devices, Inc. [AMD/ATI] RD890/RD9x0/RX980 PCI to PCI bridge (PCI Express GFX port 0)
00:03.0 PCI bridge: Advanced Micro Devices, Inc. [AMD/ATI] RD890/RD9x0 PCI to PCI bridge (PCI Express GFX port 1)
00:04.0 PCI bridge: Advanced Micro Devices, Inc. [AMD/ATI] RD890/RD9x0/RX980 PCI to PCI bridge (PCI Express GPP Port 0)
00:11.0 SATA controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 SATA Controller [IDE mode] (rev 40)
00:12.0 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB OHCI0 Controller
00:12.2 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB EHCI Controller
00:13.0 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB OHCI0 Controller
00:13.2 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB EHCI Controller
00:14.0 SMBus: Advanced Micro Devices, Inc. [AMD/ATI] SBx00 SMBus Controller (rev 42)
00:14.1 IDE interface: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 IDE Controller (rev 40)
00:14.2 Audio device: Advanced Micro Devices, Inc. [AMD/ATI] SBx00 Azalia (Intel HDA) (rev 40)
00:14.3 ISA bridge: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 LPC host controller (rev 40)
00:14.4 PCI bridge: Advanced Micro Devices, Inc. [AMD/ATI] SBx00 PCI to PCI Bridge (rev 40)
00:14.5 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB OHCI2 Controller
00:15.0 PCI bridge: Advanced Micro Devices, Inc. [AMD/ATI] SB700/SB800/SB900 PCI to PCI bridge (PCIE port 0)
00:16.0 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB OHCI0 Controller
00:16.2 USB controller: Advanced Micro Devices, Inc. [AMD/ATI] SB7x0/SB8x0/SB9x0 USB EHCI Controller
00:18.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 0
00:18.1 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 1
00:18.2 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 2
00:18.3 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 3
00:18.4 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 4
00:18.5 Host bridge: Advanced Micro Devices, Inc. [AMD] Family 15h Processor Function 5
01:00.0 VGA compatible controller: NVIDIA Corporation G92 [GeForce 8800 GS] (rev a2)
02:00.0 VGA compatible controller: NVIDIA Corporation GT215 [GeForce GT 240] (rev a2)
02:00.1 Audio device: NVIDIA Corporation High Definition Audio Controller (rev a1)
03:00.0 USB controller: ASMedia Technology Inc. ASM1042 SuperSpeed USB Host Controller
05:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)
This may complicate things further .....
Mesa compiled with this line: LANG=C setarch i686 meson ../ --prefix=/usr/X11R7 --strip --buildtype debugoptimized -Degl=true -Ddri-drivers=r100,r200,i965,nouveau -Dosmesa=true -Dplatforms=x11 -Dgallium-drivers=i915,r600,radeonsi,swrast,virgl,nouveau,r300,iris -Dvulkan-drivers=amd,intel,swrast -Dgallium-nine=true -Dgallium-opencl=icd -Dgallium-va=true -Dgallium-omx=bellagio -Dgallium-xvmc=true -Dgallium-xa=false -Dopencl-spirv=true
userpref.blend - Blender's userpref file, it reads this one on startup:
blender
Read prefs: /home/guest/.config/blender/2.79/config/userpref.blend
found bundled python: /usr/share/blender/2.79/python
[Lux 2021-Feb-03 09:18:06] Attempting to import pylux module from "/usr/local/bin"
[Lux 2021-Feb-03 09:18:06] Failed to import pylux module from "/usr/local/bin" (Error: No module named 'pylux')
[Lux 2021-Feb-03 09:18:06] Attempting to import pylux module from "/home/guest/.config/blender/2.79/scripts/addons/luxrender"
[Lux 2021-Feb-03 09:18:06] WARNING: Binary pylux module not available! Visit http://www.luxrender.net/ to obtain one for your system.
[Lux 2021-Feb-03 09:18:06] (ImportError was: No module named 'luxrender.pylux')
[Lux 2021-Feb-03 09:18:06] Attempting to import pyluxcore module from "/usr/local/bin"
[Lux 2021-Feb-03 09:18:06] Pyluxcore module imported successfully
[Lux 2021-Feb-03 09:18:06] Using pyluxcore version 1.6
[Lux 2021-Feb-03 09:18:07] Installed scene post-update handler
path not found
Lux mat converter: Importing modules complete!
Load Handler: Convert Yafaray texture "Tex" with texture type: "NONE" to "NONE"
path not found
Blender quit